--- a/app/src/main/res/layout/item_loaisach.xml
+++ b/app/src/main/res/layout/item_loaisach.xml
@@ -76,6 +76,27 @@
                 android:textStyle="bold"
                 android:textSize="10sp"/>
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+            <TextView
+                android:id="@+id/temp_4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="10sp"
+                android:text="CCCD: "
+                android:textStyle="bold"
+                />
+            <TextView
+                android:id="@+id/item_lv_cccd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="099800900"
+                android:textStyle="bold"
+                android:textSize="10sp"/>
+        </LinearLayout>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
