--- a/app/src/main/res/layout/item_sach.xml
+++ b/app/src/main/res/layout/item_sach.xml
@@ -51,6 +51,15 @@
             android:textSize="16sp"
             android:textStyle="bold"
             />
+        <TextView
+            android:id="@+id/item_sach_namXB"
+            style="@style/Widget.AppCompat.TextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Năm Xuất Bản"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            />
     </LinearLayout>
 
 </LinearLayout>
